// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optimistic bundling of css feeds 1`] = `"h1 { color: red; }"`;

exports[`optimistic bundling of js feeds 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`publish instructions before publishing assets 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`publish instructions before publishing muiltple assets 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`publish instructions updated 1`] = `
Object {
  "/instructions/js/layout1.json": "{\\"data\\":[\\"podlet1\\",\\"podlet2\\",\\"podlet3\\"],\\"tag\\":\\"layout1\\",\\"type\\":\\"js\\"}",
  "/tags/js/podlet1.txt": "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb",
  "/tags/js/podlet2.txt": "7c0b9c0ad5b9247e858b0ba9194ecc46db054bde86b58a8315177a0b8538417b",
  "/tags/js/podlet3.txt": "55e123fad7a90f29f58de918c562779b5902ae9e939ca4192aa337d5a57d74b5",
  "55e123fad7a90f29f58de918c562779b5902ae9e939ca4192aa337d5a57d74b5.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/baz.js\\",\\"id\\":\\"a645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "7c0b9c0ad5b9247e858b0ba9194ecc46db054bde86b58a8315177a0b8538417b.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/foo.js\\",\\"id\\":\\"b645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/bar.js\\",\\"id\\":\\"c645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "dee1108e985a441997a0d4f14c0678b7a7b1145d5966e13c18bdd3b605beffc2.js": "(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
",
}
`;

exports[`publish instructions updated 2`] = `
Object {
  "/instructions/js/layout1.json": "{\\"data\\":[\\"podlet1\\",\\"podlet2\\"],\\"tag\\":\\"layout1\\",\\"type\\":\\"js\\"}",
  "/tags/js/podlet1.txt": "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb",
  "/tags/js/podlet2.txt": "7c0b9c0ad5b9247e858b0ba9194ecc46db054bde86b58a8315177a0b8538417b",
  "/tags/js/podlet3.txt": "55e123fad7a90f29f58de918c562779b5902ae9e939ca4192aa337d5a57d74b5",
  "55e123fad7a90f29f58de918c562779b5902ae9e939ca4192aa337d5a57d74b5.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/baz.js\\",\\"id\\":\\"a645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "7c0b9c0ad5b9247e858b0ba9194ecc46db054bde86b58a8315177a0b8538417b.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/foo.js\\",\\"id\\":\\"b645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb.json": "[{\\"deps\\":{},\\"file\\":\\"./assets/js/bar.js\\",\\"id\\":\\"c645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\"}]",
  "a0c85d1d8c7755746e2f95bd486b7767bce94ad0616fcbe8d62a094b8c5bbbc2.js": "(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
",
  "dee1108e985a441997a0d4f14c0678b7a7b1145d5966e13c18bdd3b605beffc2.js": "(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
",
}
`;

exports[`publish instructions updated 3`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`publishing a feed via the /publish-assets endpoint 1`] = `
Object {
  "file": "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb.json",
  "id": "7e9c95082ebd8cbd7927a923639eff03ae936a539791264f21cd1ad307e9ffdb",
}
`;

exports[`republishing different asset triggers a rebuild 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`republishing different asset triggers a rebuild 2`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;

exports[`republishing same asset does not trigger a rebuild 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({},{},[]);
"
`;
